--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h1{
     color: var(--cor-destaque);
 }
 
-.button{
+button{
     background-color: var(--cor-secundaria);
     color: var(--cor-texto);
     border: none;
